--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
     <main class="main-box">
         <div id="kinds"></div>
-        <div id="elements-list"></div>
-        <div id="results">
-            <div id="elem-box">ELEMENT</div>
-            <div id="fmla">FMLA</div>
-            <div id="name"></div>
+        <div style="width:80%">
+            <div id="elements-list"></div>
+            <div id="bottom-box">
+                <div id="elem-box">ELEMENT</div>
+                <div id="results">RESULTS</div>
+            </div>
         </div>
     </main>
 </body>
