restructure project files as modules

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Fmla Quim</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="./style.css">
-    <script src="./data.js"></script>
-    <script defer src="./script.js"></script>
+    <script defer src="./js/app.js" type="module"></script>
 </head>
 
 <body>
