--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>Fmla Quim</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="./style.css">
-    <script defer src="./js/app.js" type="module"></script>
+    <!-- imports - constants -->
+     <script src="./constants/colors.js"></script>
+     <script src="./constants/elements.js"></script>
+     <script src="./constants/help.js"></script>
+     <script src="./constants/kinds.js"></script>
+     <script src="./constants/prefixes.js"></script>
+    <!-- imports - functions -->
+    <script src="./js/utils.js"></script>
+    <script src="./js/elementary.js"></script>
+    <script src="./js/methidrures.js"></script>
+    <script src="./js/periodic.js"></script>
+    <!-- app -->
+    <script defer src="./js/app.js"></script>
 </head>
 
 <body>
