--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>FMLAQUIM - V2</title>
   <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   <link rel="stylesheet" href="./css/style.css">
-  <!-- imports - constants -->
-
   <!-- imports - functions -->
   <script src="./js/utils.js"></script>
+  <!-- imports - llibreria -->
+  <script src="./lib/chemhelp.js"></script>
   <!-- app -->
   <script defer src="./js/app.js"></script>
 </head>
