V2. Preparació estructura completa

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <!-- imports - functions -->
   <script src="./js/utils.js"></script>
   <!-- imports - llibreria -->
+  <script src="./lib/elements.js"></script>
   <script src="./lib/chemhelp.js"></script>
   <!-- app -->
   <script defer src="./js/app.js"></script>
@@ -24,13 +25,13 @@
         <option value="eu">Euskara</option>
         <option value="en">English</option>
       </select>
-      <select id="select-system">
+      <select id="select-system" style="display:none;">
         <option value="PRE">Prefixes</option>
         <option value="NOX">Nombres oxidació</option>
         <option value="TRA">Tradicional</option>
         <option value="SIS">Sistemàtic</option>
       </select>
-      <select id="select-mode">
+      <select id="select-mode" style="display:none;">
         <option value="FN">Fmla &rarr; Nom</option>
         <option value="NF">Nom &rarr; Fmla</option>
       </select>
