--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>FMLAQUIM - V2</title>
   <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   <link rel="stylesheet" href="./css/style.css">
+  <!-- imports - constants -->
+  <script src="./js/constants.js"></script>
+  <script src="./common/help.js"></script>
   <!-- imports - functions -->
   <script src="./js/utils.js"></script>
   <!-- imports - llibreria -->
