transform HELP. keys with strings instead of numbers

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="stylesheet" href="./css/style.css">
   <!-- imports - constants -->
   <script src="./js/constants.js"></script>
-  <script src="./common/help.js"></script>
   <!-- imports - functions -->
   <script src="./js/utils.js"></script>
   <!-- imports - llibreria -->
   <script src="./lib/elements.js"></script>
+  <script src="./lib/help.js"></script>
   <script src="./lib/chemhelp.js"></script>
   <!-- app -->
   <script defer src="./js/app.js"></script>
@@ -35,8 +35,8 @@
         <option value="SIS">Sistemàtic</option>
       </select>
       <select id="select-mode" style="display:none;">
-        <option value="FN">Fmla &rarr; Nom</option>
-        <option value="NF">Nom &rarr; Fmla</option>
+        <option value="1">Fmla &rarr; Nom</option>
+        <option value="2">Nom &rarr; Fmla</option>
       </select>
       <select id="select-kind">
         <option value="1">1. sustancias elementales</option>
