--- a/v1/index.html
+++ b/v1/index.html
@@ -10,7 +10,7 @@
     <!-- imports - constants -->
     <script src="./constants/colors.js"></script>
     <script src="./constants/elements.js"></script>
-    <script src="../common/help.js"></script>
+    <script src="./constants/help.js"></script>
     <script src="./constants/kinds.js"></script>
     <script src="./constants/prefixes.js"></script>
     <!-- imports - functions -->
