--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <!-- imports - llibreria -->
   <script src="./lib/elements.js"></script>
   <script src="./lib/help.js"></script>
+  <script src="./lib/literals.js"></script>
   <script src="./lib/chemhelp.js"></script>
   <!-- app -->
   <script defer src="./js/app.js"></script>
@@ -40,7 +41,7 @@
       </select>
       <select id="select-kind">
         <option value="1">1. sustancias elementales</option>
-        <option value="2">2. hidruros metálicos</option>
+        <option value="2" selected>2. hidruros metálicos</option>
         <option value="3">3. hidrácidos</option>
         <option value="4">4. óxidos metálicos</option>
         <option value="5">5. óxidos no metálicos</option>
