`getMetalOxidesPRE_FN` (parcial) Falta fer genitiu català

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       </select>
       <select id="select-kind">
         <option value="1">1. sustancias elementales</option>
-        <option value="2" selected>2. hidruros metálicos</option>
+        <option value="2">2. hidruros metálicos</option>
         <option value="3">3. hidrácidos</option>
-        <option value="4">4. óxidos metálicos</option>
+        <option value="4" selected>4. óxidos metálicos</option>
         <option value="5">5. óxidos no metálicos</option>
         <option value="6">6. halogenuros de oxígeno</option>
         <option value="7">7. comp. covalentes no metálicos</option>
@@ -54,7 +54,7 @@
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="Al2O3">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
