`getMetalOxidesPRE_FN` done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <!-- imports - functions -->
   <script src="./js/utils.js"></script>
   <!-- imports - llibreria -->
+   <script src="./lib/constants.js"></script>
   <script src="./lib/elements.js"></script>
   <script src="./lib/help.js"></script>
   <script src="./lib/literals.js"></script>
