`getOtherCovalentsPRE_FN` done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- imports - functions -->
   <script src="./js/utils.js"></script>
   <!-- imports - llibreria -->
-   <script src="./lib/constants.js"></script>
+  <script src="./lib/constants.js"></script>
   <script src="./lib/elements.js"></script>
   <script src="./lib/help.js"></script>
   <script src="./lib/literals.js"></script>
@@ -44,10 +44,10 @@
         <option value="1">1. sustancias elementales</option>
         <option value="2">2. hidruros metálicos</option>
         <option value="3">3. hidrácidos</option>
-        <option value="4" >4. óxidos metálicos</option>
+        <option value="4">4. óxidos metálicos</option>
         <option value="5">5. óxidos no metálicos</option>
-        <option value="6"selected>6. halogenuros de oxígeno</option>
-        <option value="7">7. comp. covalentes no metálicos</option>
+        <option value="6">6. halogenuros de oxígeno</option>
+        <option value="7" selected>7. comp. covalentes no metálicos</option>
         <option value="8">8. sales binarias</option>
         <option value="9">9. peróxidos</option>
         <option value="10">10. hidróxidos</option>
@@ -55,7 +55,7 @@
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="O3Br2">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="N2S3">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
