`Peroxides-PRE-FN` done (és idèntic a `getOxidesPRE_FN`)

--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
         <option value="5">5. óxidos no metálicos</option>
         <option value="6">6. halogenuros de oxígeno</option>
         <option value="7" >7. comp. covalentes no metálicos</option>
-        <option value="8"selected>8. sales binarias</option>
+        <option value="8">8. sales binarias</option>
         <option value="9">9. peróxidos</option>
-        <option value="10">10. hidróxidos</option>
+        <option value="10"selected>10. hidróxidos</option>
         <option value="12">12. oxoácidos</option>
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="Al2S3">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="Ca(OH)2">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
