`getMetalHidrNOX_FN` done

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </select>
       <select id="select-kind">
         <option value="1">1. sustancias elementales</option>
-        <option value="2">2. hidruros metálicos</option>
+        <option value="2"selected>2. hidruros metálicos</option>
         <option value="3">3. hidrácidos</option>
         <option value="4">4. óxidos metálicos</option>
         <option value="5">5. óxidos no metálicos</option>
@@ -50,12 +50,12 @@
         <option value="7" >7. comp. covalentes no metálicos</option>
         <option value="8">8. sales binarias</option>
         <option value="9">9. peróxidos</option>
-        <option value="10"selected>10. hidróxidos</option>
+        <option value="10">10. hidróxidos</option>
         <option value="12">12. oxoácidos</option>
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="Ca(OH)2">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="AuH3">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
