--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <option value="2">2. hidruros metálicos</option>
         <option value="3">3. hidrácidos</option>
         <option value="4">4. óxidos metálicos</option>
-        <option value="5"selected>5. óxidos no metálicos</option>
+        <option value="5">5. óxidos no metálicos</option>
         <option value="6">6. halogenuros de oxígeno</option>
-        <option value="7" >7. comp. covalentes no metálicos</option>
+        <option value="7" selected>7. comp. covalentes no metálicos</option>
         <option value="8">8. sales binarias</option>
         <option value="9">9. peróxidos</option>
         <option value="10">10. hidróxidos</option>
@@ -55,7 +55,7 @@
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="N2O5">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="NBr3">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
