`getHydroxidesNOX_FN` done

--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
         <option value="2">Nom &rarr; Fmla</option>
       </select>
       <select id="select-kind">
-        <option value="1">1. sustancias elementales</option>
+        <option value="1"selected>1. sustancias elementales</option>
         <option value="2">2. hidruros metálicos</option>
         <option value="3">3. hidrácidos</option>
         <option value="4">4. óxidos metálicos</option>
         <option value="5">5. óxidos no metálicos</option>
         <option value="6">6. halogenuros de oxígeno</option>
-        <option value="7" >7. comp. covalentes no metálicos</option>
+        <option value="7">7. comp. covalentes no metálicos</option>
         <option value="8">8. sales binarias</option>
-        <option value="9"selected>9. peróxidos</option>
+        <option value="9">9. peróxidos</option>
         <option value="10">10. hidróxidos</option>
         <option value="12">12. oxoácidos</option>
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="Au2(O2)3">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="O3">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
