--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <body>
   <header>
     <form oninput="changeForm(event,this)" onkeydown="return event.key != 'Enter';">
+      <small>v2</small>
       <select id="select-lang">
         <option value="es">Español</option>
         <option value="ca">Català</option>
@@ -41,8 +42,8 @@
         <option value="2">Nom &rarr; Fmla</option>
       </select>
       <select id="select-kind">
-        <option value="1"selected>1. sustancias elementales</option>
-        <option value="2">2. hidruros metálicos</option>
+        <option value="1">1. sustancias elementales</option>
+        <option value="2"selected>2. hidruros metálicos</option>
         <option value="3">3. hidrácidos</option>
         <option value="4">4. óxidos metálicos</option>
         <option value="5">5. óxidos no metálicos</option>
@@ -55,7 +56,7 @@
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="O3">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="AuH3">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
