`getHydracidsNOX_NF` done

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </select>
       <select id="select-kind">
         <option value="1">1. sustancias elementales</option>
-        <option value="2"selected>2. hidruros metálicos</option>
-        <option value="3">3. hidrácidos</option>
+        <option value="2">2. hidruros metálicos</option>
+        <option value="3"selected>3. hidrácidos</option>
         <option value="4">4. óxidos metálicos</option>
         <option value="5">5. óxidos no metálicos</option>
         <option value="6">6. halogenuros de oxígeno</option>
@@ -56,7 +56,7 @@
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="AuH3">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="H2Se">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
