`getOxidesPRE_NF` done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <header>
     <form oninput="changeForm(event,this)" onkeydown="return event.key != 'Enter';">
-      <small>v3</small>
+      <small>v4</small>
       <select id="select-lang">
         <option value="es">Español</option>
         <option value="ca">Català</option>
@@ -44,8 +44,8 @@
       <select id="select-kind">
         <option value="1">1. sustancias elementales</option>
         <option value="2">2. hidruros metálicos</option>
-        <option value="3"selected>3. hidrácidos</option>
-        <option value="4">4. óxidos metálicos</option>
+        <option value="3">3. hidrácidos</option>
+        <option value="4"selected>4. óxidos metálicos</option>
         <option value="5">5. óxidos no metálicos</option>
         <option value="6">6. halogenuros de oxígeno</option>
         <option value="7">7. comp. covalentes no metálicos</option>
@@ -56,7 +56,7 @@
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="H2Se">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="MnO">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
