--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <header>
     <form oninput="changeForm(event,this)" onkeydown="return event.key != 'Enter';">
-      <small>v4</small>
+      <small>v5</small>
       <select id="select-lang">
         <option value="es">Español</option>
         <option value="ca">Català</option>
@@ -45,8 +45,8 @@
         <option value="1">1. sustancias elementales</option>
         <option value="2">2. hidruros metálicos</option>
         <option value="3">3. hidrácidos</option>
-        <option value="4"selected>4. óxidos metálicos</option>
-        <option value="5">5. óxidos no metálicos</option>
+        <option value="4">4. óxidos metálicos</option>
+        <option value="5"selected>5. óxidos no metálicos</option>
         <option value="6">6. halogenuros de oxígeno</option>
         <option value="7">7. comp. covalentes no metálicos</option>
         <option value="8">8. sales binarias</option>
@@ -56,7 +56,7 @@
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="MnO">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="CO2">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
