--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <header>
     <form oninput="changeForm(event,this)" onkeydown="return event.key != 'Enter';">
-      <small>v7</small>
+      <small>v8</small>
       <select id="select-lang">
         <option value="es">Español</option>
         <option value="ca">Català</option>
@@ -49,14 +49,14 @@
         <option value="5">5. óxidos no metálicos</option>
         <option value="6">6. halogenuros de oxígeno</option>
         <option value="7">7. comp. covalentes no metálicos</option>
-        <option value="8"selected>8. sales binarias</option>
-        <option value="9">9. peróxidos</option>
+        <option value="8">8. sales binarias</option>
+        <option value="9"selected>9. peróxidos</option>
         <option value="10">10. hidróxidos</option>
         <option value="12">12. oxoácidos</option>
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="PbS2">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="Au2(O2)3">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
