--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
   <!-- imports - functions -->
   <script src="./js/utils.js"></script>
   <!-- imports - llibreria -->
-  <script src="./lib/constants.js"></script>
+  <!-- <script src="./lib/constants.js"></script>
   <script src="./lib/elements.js"></script>
   <script src="./lib/help.js"></script>
   <script src="./lib/literals.js"></script>
-  <script src="./lib/chemhelp.js"></script>
+  <script src="./lib/chemhelp.js"></script> -->
+  <!-- imports - llibreria com a mòdul-->
+  <script type="module" src="./lib/chemhelp.js"></script>
   <!-- app -->
-  <script defer src="./js/app.js"></script>
+  <script defer type="module" src="./js/app.js"></script>
 </head>
 
 <body>
   <header>
-    <form oninput="changeForm(event,this)" onkeydown="return event.key != 'Enter';">
+    <form onkeydown="return event.key != 'Enter';">
       <small>v10</small>
       <select id="select-lang">
         <option value="es">Español</option>
@@ -56,7 +58,7 @@
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="H2">
     </form>
     <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
