--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <!-- <script type="module" src="./lib/chemhelp.js"></script> -->
 
   <!-- imports - llibreria com a iife generat -->
-  <script src="./out/chemhelp.js"></script>
+  <!-- <script src="./out/chemhelplib.js"></script> -->
+  <script src="./out/chemhelplib.min.js"></script>
 
   <!-- app -->
   <script defer src="./js/app.js"></script>
@@ -31,7 +32,7 @@
 <body>
   <header>
     <form onkeydown="return event.key != 'Enter';">
-      <small>v11</small>
+      <small>v12</small>
       <select id="select-lang">
         <option value="es">Español</option>
         <option value="ca">Català</option>
