add clickable examples

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <span class="input-data-part"><small>symb2:</small></span>
       <span class="input-data-part"><small>sub2:</small></span>
     </div>
+    <div id="examples"></div>
   </header>
   <main></main>
 </body>
