--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <body>
   <header>
     <form onkeydown="return event.key != 'Enter';">
-      <small id="version-tag">v12</small>
+      <small id="version-tag">version</small>
       <select id="select-lang">
         <option value="es">Español</option>
         <option value="ca">Català</option>
