--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- imports - llibreria com a iife generat -->
   <!-- <script src="./out/chemhelplib.js"></script> -->
-  <script src="./out/chemhelplib.min.js"></script>
+  <script src="./out/rec0000_pgchem_helplib.min.js"></script>
 
   <!-- app -->
   <script defer src="./js/app.js"></script>
