--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
       </select>
       <input id="input-fmla" type="text" placeholder="Fórmula" value="H2">
     </form>
-    <div id="input-data">
+    <!-- <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
       <span class="input-data-part"><small>sub1:</small></span>
       <span class="input-data-part"><small>symb2:</small></span>
       <span class="input-data-part"><small>sub2:</small></span>
-    </div>
+    </div> -->
     <div id="examples"></div>
   </header>
   <main></main>
