--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
   <link rel="stylesheet" href="./css/style.css">
+
   <!-- imports - constants -->
   <script src="./js/constants.js"></script>
+
   <!-- imports - functions -->
   <script src="./js/utils.js"></script>
+
   <!-- imports - llibreria -->
   <!-- <script src="./lib/constants.js"></script>
   <script src="./lib/elements.js"></script>
@@ -23,11 +26,10 @@
   <!-- <script type="module" src="./lib/chemhelp.js"></script> -->
 
   <!-- imports - llibreria com a iife generat -->
-  <!-- <script src="./out/chemhelplib.js"></script> -->
-  <script src="./out/rec0000_pgchem_helplib.min.js"></script>
+  <!-- <script src="./out/rec0000_pgchem_helplib.min.js"></script> -->
 
   <!-- app -->
-  <script defer src="./js/app.js"></script>
+  <script defer type="module" src="./js/app.js"></script>
 </head>
 
 <body>
