`help.js`, copied English explanation texts

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <option value="es">Español</option>
         <option value="ca">Català</option>
         <option value="eu">Euskara</option>
-        <option value="en">English</option>
+        <option value="en" selected>English</option>
       </select>
       <select id="select-system" style="display:none;">
         <option value="PRE">Prefixes</option>
