--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       <select id="select-lang">
         <option value="es">Español</option>
         <option value="ca">Català</option>
-        <option value="eu">Euskara</option>
-        <option value="en" selected>English</option>
+        <option value="eu" selected>Euskara</option>
+        <option value="en">English</option>
       </select>
       <select id="select-system" style="display:none;">
         <option value="PRE">Prefixes</option>
@@ -61,13 +61,13 @@
         <option value="6">6. halogenuros de oxígeno</option>
         <option value="7">7. comp. covalentes no metálicos</option>
         <option value="8">8. sales binarias</option>
-        <option value="9">9. peróxidos</option>
+        <option value="9" selected>9. peróxidos</option>
         <option value="10">10. hidróxidos</option>
         <option value="12">12. oxoácidos</option>
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="H2">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="H2O2">
     </form>
     <!-- <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
