integrar simple min css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FMLAQUIM - V2</title>
   <link rel="icon" href="./favicon.ico">
-  <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+  <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> -->
+  <link rel="stylesheet" href="./css/simple.min.css">
   <link rel="stylesheet" href="./css/style.css">
 
   <!-- imports - constants -->
@@ -61,13 +62,13 @@
         <option value="6">6. halogenuros de oxígeno</option>
         <option value="7">7. comp. covalentes no metálicos</option>
         <option value="8">8. sales binarias</option>
-        <option value="9" selected>9. peróxidos</option>
-        <option value="10">10. hidróxidos</option>
+        <option value="9">9. peróxidos</option>
+        <option value="10" selected>10. hidróxidos</option>
         <option value="12">12. oxoácidos</option>
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="H2O2">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="CuOH">
     </form>
     <!-- <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
