--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FMLAQUIM - V2</title>
+  <title>FMLAQUIM - V?</title>
   <link rel="icon" href="./favicon.ico">
   <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css"> -->
   <link rel="stylesheet" href="./css/simple.min.css">
