--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <form onkeydown="return event.key != 'Enter';">
       <small id="version-tag">version</small>
       <select id="select-lang">
-        <option value="es">Español</option>
+        <option value="es" selected>Español</option>
         <option value="ca">Català</option>
-        <option value="eu" selected>Euskara</option>
+        <option value="eu">Euskara</option>
         <option value="en">English</option>
       </select>
       <select id="select-system" style="display:none;">
@@ -54,7 +54,7 @@
         <option value="2">Nom &rarr; Fmla</option>
       </select>
       <select id="select-kind">
-        <option value="1">1. sustancias elementales</option>
+        <option value="1" selected>1. sustancias elementales</option>
         <option value="2">2. hidruros metálicos</option>
         <option value="3">3. hidrácidos</option>
         <option value="4">4. óxidos metálicos</option>
@@ -63,12 +63,12 @@
         <option value="7">7. comp. covalentes no metálicos</option>
         <option value="8">8. sales binarias</option>
         <option value="9">9. peróxidos</option>
-        <option value="10" selected>10. hidróxidos</option>
+        <option value="10">10. hidróxidos</option>
         <option value="12">12. oxoácidos</option>
         <option value="13">13. oxosales</option>
         <option value="14">14. oxosales ácidas</option>
       </select>
-      <input id="input-fmla" type="text" placeholder="Fórmula" value="CuOH">
+      <input id="input-fmla" type="text" placeholder="Fórmula" value="Br2">
     </form>
     <!-- <div id="input-data">
       <span class="input-data-part"><small>symb1:</small></span>
