--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- <script type="module" src="./lib/chemhelp.js"></script> -->
 
   <!-- imports - llibreria com a iife generat -->
-  <!-- <script src="./out/rec0000_pgchem_helplib.min.js"></script> -->
+  <!-- <script src="./out/chemhelplib.min.js"></script> -->
 
   <!-- app -->
   <script defer type="module" src="./js/app.js"></script>
